# vpipeline

./: CMakeLists.txt  README.md
include/: pipeline.hpp
test/: CMakeLists.txt  main.cpp  pipeline-test.cpp
